# ttgammaSlimmer

./: CMakeLists.txt  README.md  setup.sh
Root/: ttgammaSlimmer.cxx
include/: ttgammaSlimmer.h
